Fixed scrollbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -123,3 +123,10 @@ body {
     @apply bg-background text-foreground;
   }
 }
+.scrollbar-hide {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none; /* Chrome, Safari, Opera */
+}
